--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "nprogress": "^0.2.0",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
@@ -36,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@sparticuz/chromium": "^133.0.0",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@upstash/ratelimit": "^1.2.1",
@@ -53,9 +53,9 @@
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
+    "nprogress": "^0.2.0",
     "patch-package": "^8.0.0",
-    "puppeteer": "22.10.0",
-    "puppeteer-core": "22.10.0",
+    "puppeteer-core": "^22.10.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -67,9 +67,9 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.3",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
